# pass-tomb-osx

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: crypto.rs  lib.rs  store.rs  tomb.rs
